Set logo and navbar to fixed and fixed blurry edge

--- a/theme/src/main.less
+++ b/theme/src/main.less
@@ -11,12 +11,16 @@
 }
 
 .site-logo {
-    position: absolute;
+    z-index: 10;
+    width: 100%;
+    border-bottom: 8px solid white;
+    position: fixed;
+    background-color: white;
     top: 0;
     left: 0;
     font-size: 2em;
     font-weight: 700;
-    margin: 30px;
+    padding: 28px;
     text-shadow: 0 0 10px #ffffff2e;
 
     span:first-child {
