--- a/theme/src/navbar.less
+++ b/theme/src/navbar.less
@@ -1,7 +1,8 @@
 .region-header {
     div[class^=region-header-col-] {
         .my-navbar {
-            position: absolute;
+            z-index: 20;
+            position: fixed;
             top: 0;
             right: 0;
             display: flex;
